# onnx_static

./: LICENSE  README.md
src/: CMakeLists.txt  onnx_model_io.cpp
